--- a/static/usp537/hw_usp537.Rmd
+++ b/static/usp537/hw_usp537.Rmd
@@ -276,7 +276,11 @@ It is very important to distinguish between consumer benefits for existing passe
 
  2. Using an aggregate demand model
 
-Lee’s 1980 study of gasoline demand in California yielded the following estimation results: (dependent variable is 1000s gallons of gasoline). 
+Lee’s 1980 study of gasoline demand in California yielded the following estimation results: (dependent variable is 1000s gallons of gasoline $R^2=0.92$). 
+
+|Explanatory Variable|Constant|Real Gasoline Price(\$)|Real Income (billion \$)|Population (millinons)|DEC73|JAN74|FEB74|MAR74|APR74|
+| ---                | ---:   | ---:                  |  ---:                  |   ---:               |---: |---: |---: |---: |---: |
+|Coefficient Estimate|-25193.1|-18552.8               |277.3                   |1567.9  |-1801.5  |1629.7  |-2313.1  |2524.1  |162.7|
 
 
   a. Two significant by-products of automobile use are air pollution and traffic congestion. In order to reduce the extent of each, suppose that the federal government raises the gasoline tax by $0.25. According to the above estimation results, what effect will this have on gasoline consumption in California? 
@@ -294,7 +298,7 @@ In the above figure, from point A to point B is substitution effect. The substit
 
 In the above figure, from point B to point C is income effect. The income effect highlights how consumption will change due to the consumer having a change in purchasing power as a result of the price change. The higher price means the budget line is B2, hence the optimum consumption point is Q2. This point is on a lower indifference curve (I2). 
 
-  c. Wanting to increase the price of gasoline but not reduce economic welfare, suppose that, in addition to the $0.25 cent tax on gasoline, the government also provides consumers with an income tax rebate amounting to $16.7 billion dollars (total amount).
+  c. Wanting to increase the price of gasoline but not reduce economic welfare, suppose that, in addition to the \$0.25 cent tax on gasoline, the government also provides consumers with an income tax rebate amounting to \$16.7 billion dollars (total amount).
 
    (i) According to the estimation results above, what would be the effect of the gasoline tax and income tax policies on gasoline demand?
 
