--- a/docs/usp537/hw_usp537.Rmd
+++ b/docs/usp537/hw_usp537.Rmd
@@ -298,7 +298,7 @@ In the above figure, from point A to point B is substitution effect. The substit
 
 In the above figure, from point B to point C is income effect. The income effect highlights how consumption will change due to the consumer having a change in purchasing power as a result of the price change. The higher price means the budget line is B2, hence the optimum consumption point is Q2. This point is on a lower indifference curve (I2). 
 
-  c. Wanting to increase the price of gasoline but not reduce economic welfare, suppose that, in addition to the $0.25 cent tax on gasoline, the government also provides consumers with an income tax rebate amounting to $16.7 billion dollars (total amount).
+  c. Wanting to increase the price of gasoline but not reduce economic welfare, suppose that, in addition to the \$0.25 cent tax on gasoline, the government also provides consumers with an income tax rebate amounting to \$16.7 billion dollars (total amount).
 
    (i) According to the estimation results above, what would be the effect of the gasoline tax and income tax policies on gasoline demand?
 
