--- a/docs/stat565/temp_stat565.Rmd
+++ b/docs/stat565/temp_stat565.Rmd
@@ -301,7 +301,7 @@ FB-RCBD
 $Var[ε_{ij}-\frac1a\sum_{i=1}^aε_{ij}-\frac1b\sum_{j=1}^bε_{ij}+\frac1{ab}\sum_{i=1}^a\sum_{j=1}^bε_{ij}]=$
 $Var[ε_{ij}]+\frac{\sum_{i=1}^aVar[ε_{ij}]}{a^2}+\frac{\sum_{j=1}^bVar[ε_{ij}]}{b^2}+\frac{\sum_{i=1}^a\sum_{j=1}^bVar[ε_{ij}]}{a^2b^2}-\frac{2Cov[ε_{ij},\sum_{i=1}^aε_{ij}]}{a}-\frac{2Cov[ε_{ij},\sum_{j=1}^bε_{ij}]}{b}+\frac{2Cov[ε_{ij},\sum_{i=1}^a\sum_{j=1}^bε_{ij}]}{ab}+\frac{2Cov[\sum_{i=1}^aε_{ij},\sum_{j=1}^bε_{ij}]}{ab}$
 $-\frac{2Cov[\sum_{i=1}^aε_{ij},\sum_{i=1}^a\sum_{j=1}^bε_{ij}]}{a^2b}-\frac{2Cov[\sum_{j=1}^bε_{ij},\sum_{i=1}^a\sum_{j=1}^bε_{ij}]}{ab^2}$
-$=\sigma^2+\frac{\sigma^2}{a}+\frac{\sigma^2}{b}+\frac{\sigma^2}{ab}-\frac{2\sigma^2}{a}-\frac{2\sigma^2}{b}+\frac{2\sigma^2}{ab}+\frac{2\sigma^2}{ab}-\frac{2\sigma^2}{ab}-\frac{2\sigma^2}{ab}=\frac{(ab-a-b-1)\sigma^2}{ab}$
+$=\sigma^2+\frac{\sigma^2}{a}+\frac{\sigma^2}{b}+\frac{\sigma^2}{ab}-\frac{2\sigma^2}{a}-\frac{2\sigma^2}{b}+\frac{2\sigma^2}{ab}+\frac{2\sigma^2}{ab}-\frac{2\sigma^2}{ab}-\frac{2\sigma^2}{ab}=\frac{(ab-a-b+1)\sigma^2}{ab}$
 
  ---
 
@@ -363,4 +363,4 @@ $Cov[\sum_{j=1}^nε_{ij},\sum_{i=1}^a\sum_{j=1}^nε_{ij}]=Cov[(ε_{i1}+ε_{i2}..
 
 |$\hat\mu_i$|$\hat\tau_i$|$\hat\beta_j$|$\hat y_{ij}$|$ε_{ij}$|$\hat\sigma^2$|$\hat\sigma_{Trt}^2$|$\hat\sigma_{Blk}^2$|$\widehat{Var(\bar y_{i.})}$|$\hat{X}$
 |    ---    | ---        |     ---     |   ---        |  ---  |  ---   |   ---       | ---      | ---      |
-|$\bar y_{..}$|$\bar y_{i.}-\bar y_{..}$|$\bar y_{.j}-\bar y_{..}$|$\bar y_{i.}+\bar y_{.j}-\bar y_{..}$|$\bar y_{ij}-\bar y_{..}$|$MSE$|$\frac{MS_{Trt}-MS_{E}}{n}$|$\frac{MS_{Blk}-MS_{Blk}}{a}$|$\frac{MS_{Trt}}{n}$|$\frac{ay'_{i.}+by'_{.j}-y_{..}'}{(a-1)(b-1)}$
+|$\bar y_{..}$|$\bar y_{i.}-\bar y_{..}$|$\bar y_{.j}-\bar y_{..}$|$\bar y_{i.}+\bar y_{.j}-\bar y_{..}$|$\bar y_{ij}-\bar y_{..}$|$MSE$|$\frac{MS_{Trt}-MS_{E}}{n}$|$\frac{MS_{Blk}-MS_{E}}{a}$|$\frac{MS_{Trt}}{n}$|$\frac{ay'_{i.}+by'_{.j}-y_{..}'}{(a-1)(b-1)}$
