--- a/docs/stat565/stat565.tex
+++ b/docs/stat565/stat565.tex
@@ -1,14 +1,14 @@
-\documentclass[10pt,landscape]{article}
+\documentclass[10pt,portrait]{article}
 \usepackage{multicol}
 \usepackage{calc}
 \usepackage{ifthen}
-\usepackage[landscape]{geometry}
+\usepackage[portrait]{geometry}
 \usepackage{hyperref}
 
 % This sets page margins to .5 inch if using letter paper, and to 1cm
 % if using A4 paper. (This probably isn't strictly necessary.)
 % If using another size paper, use default 1cm margins.
-\ifthenelse{\lengthtest { \paperwidth = 11in}}
+\ifthenelse{\lengthtest { \paperwidth = 8.5in}}
 	{ \geometry{top=.2in,left=.2in,right=.2in,bottom=.2in} }
 
 % Turn off header and footer
@@ -48,7 +48,7 @@
 
 \raggedright
 \footnotesize
-\begin{multicols}{3}
+%\begin{multicols}{2}
 
 
 % multicol parameters
@@ -63,222 +63,96 @@
 %     \Large{\textbf{STAT564}} \\
 %\end{center}
 
-\section{simple linear regression}
+\section{565 mid-term}
 \subsection{model}
 response variable=parameters(coefficients).predictor+random error;
 5 Assumption: linear relationship between x,y; $E(\varepsilon)=0,Var(\varepsilon)=\sigma^2$;homoscedasticity;$Cov(\varepsilon_i,\varepsilon_j)=0 for i\ne{j}$
 $y_i=\beta_0+\beta_1x_i+\varepsilon_i$; $\varepsilon_i\sim^{iid}N(0,\sigma^2)\ i=1,2..n$;
 
 \subsubsection{least square}
-$SSE,S(\hat\beta_0,\hat\beta_1),\sum_{i=1}^n\hat\varepsilon_i^2=\sum_{i=1}^n(y_i-\hat{y_i})^2=\sum_{i=1}^n(y_i-\hat\beta_0-\hat\beta_1x_i)^2=(Y-X\beta)'(Y-X\beta)=YY'-2Y'X\beta+\beta'X'X\beta$;
-
-\begin{tabular}{ l|l }
-$\frac{\partial SSE}{\partial\beta_0}=0=2\sum_{i=1}^n(y_i-\hat\beta_0-\hat\beta_1x_i)(-1)$   & $\frac{\partial{a'w}}{\partial{w}}=a$ \\
-$\frac{\partial SSE}{\partial\beta_1}=0=2\sum_{i=1}^n(y_i-\hat\beta_0-\hat\beta_1x_i)(-x_i)$ & $\frac{\partial{w'Aw}}{\partial{w}}=2Aw$ \\
-\end{tabular}
+$y_{ij}=\mu+\tau_{i}+\varepsilon_{ij}$, for $ε_{ij}\sim iid N(0,\sigma^2),i=1,2,…,a,j=1,2,…,n$, $\sum_{i=1}^a\tau_i=0$
+$SSE=\sum_{i=1}^a\sum_{j=1}^n(y_{ij}-\mu-\tau_i)^2$,or $\sum_{i=1}^a\sum_{j=1}^n(y_{ij}-\mu-\tau_i-\beta_j)^2$,
+$\left.\frac{\partial SSE}{\partial\mu}\right|_{\hat\mu,\hat\tau_i}=2\sum_{i=1}^a\sum_{j=1}^n(y_{ij}-\hat\mu-\hat\tau_i)(-1)=0$,$y_{..}=an\hat\mu+n\sum_{i=1}^a\hat\tau_i$
+$\left.\frac{\partial SSE}{\partial\tau_i}\right|_{\hat\mu,\hat\tau_i}=2\sum_{j=1}^n(y_{ij}-\hat\mu-\hat\tau_i)(-1)=0$,$y_{i.}=n\hat\mu+n\hat\tau_i$
+$\left.\frac{\partial SSE}{\partial\mu}\right|_{\hat\mu,\hat\tau_i,\hat\beta_j}=2\sum_{i=1}^a\sum_{j=1}^b(y_{ij}-\hat\mu-\hat\tau_i-\hat\beta_j)(-1)=0$,$y_{..}=ab\hat\mu+b\sum_{i=1}^a\hat\tau_i+a\sum_{j=1}^b\hat\beta_j$
+$\left.\frac{\partial SSE}{\partial\tau_i}\right|_{\hat\mu,\hat\tau_i,\hat\beta_j}=2\sum_{j=1}^b(y_{ij}-\hat\mu-\hat\tau_i-\hat\beta_j)(-1)=0$,$y_{i.}=b\hat\mu+b\hat\tau_i+\sum_{j=1}^b\hat\beta_j$
+$\left.\frac{\partial SSE}{\partial\beta_j}\right|_{\hat\mu,\hat\tau_i,\hat\beta_j}=2\sum_{i=1}^a(y_{ij}-\hat\mu-\hat\tau_i-\hat\beta_j)(-1)=0$,$y_{.j}=a\hat\mu+\sum_{i=1}^a\hat\tau_i+a\hat\beta_j$
 
 \subsubsection{normal equation}
-$\sum_{i=1}^ny_i=n\hat\beta_0+\hat\beta_1\sum_{i=1}^nx_i\Rightarrow \bar y=\hat\beta_0+\hat\beta_1\bar x$;
-$\sum_{i=1}^nx_iy_i=\hat\beta_0\sum_{i=1}^nx_i+\hat\beta_1\sum_{i=1}^nx_i^2; \mathbf{X'Y=X'X\beta}$
 
-\subsubsection{corrected sum of suqares}
-$S_{xx}=\sum_{i=1}^n(x_i-\bar x)^2=\sum_{i=1}^nx_i^2-n\bar x^2=\sum_{i=1}^nx_i(x_i-\bar x)=\sum_{i=1}^nx_i^2-(\sum_{i=1}^nx_i)^2/n$;
-$S_{xy}=\sum_{i=1}^n(x_i-\bar x)y_i=\sum_{i=1}^nx_i(y_i-\bar y)=\sum_{i=1}^nx_iy_i-n\bar{x}\bar{y}=\sum_{i=1}^n(x_i-\bar x)(y_i-\bar y)=\sum_{i=1}^nx_iy_i-(\sum_{i=1}^nx_i\sum_{i=1}^ny_i)/n$;
-$S_{yy}=\sum_{i=1}^n(y_i-\bar y)^2=\sum_{i=1}^ny_i^2-n\bar y^2$
+$$\hat\mu=\frac1{an}y_{..}-\frac1{a}\sum_{i=1}^a\hat\tau_i=\bar y_{..}$$
+$$\hat\tau_i=\frac1{a}y_{i.}-\hat\mu=\bar y_{i.}-\bar y_{..}$$
 
-\subsubsection{sum}
-$\sum_{i=1}^n(y_i)=n\bar y$;
-$\sum_{i=1}^n(y_i-\hat y)=\sum_{i=1}^ne_i=0$;
-$\sum_{i=1}^ny_i=\sum_{i=1}^n\hat y$;
-$\sum_{i=1}^n\hat ye_i=\sum_{i=1}^nx_ie_i=0$
-
-\subsubsection{Ci}
-$c_i=\frac{x_i-\bar x}{S_{xx}}$;
-$\sum_{i=1}^nc_i^2=\frac{\sum_{i=1}^n(x_i-\bar x)^2}{S_{xx}^2}=\frac1{S_{xx}}$;
-$\sum_{i=1}^nc_ix_i=\frac1{S_{xx}}\sum_{i=1}^nx_i(x_i-\bar x)=\frac{S_{xx}}{S_{xx}}=1$;
-$\sum_{i=1}^nc_i=0=\sum_{i=1}^n\frac{x_i-\bar x}{S_{xx}}=\frac1{S_{xx}}\sum_{i=1}^n(x_i-\bar x)=\frac1{S_{xx}}(n\bar x-n\bar x)$
-
-\subsection{estimation, regression coefficient}
-$\hat{y_i}=\hat\beta_0+\hat\beta_1x_i=X\hat\beta=X(X'X)^{-1}X'Y=HY$
-$\hat{\beta_1}=\frac{S_{xy}}{S_{xx}}=r \frac{SD_x}{SD_y}=\sum_{i=1}^nc_iy_i=(X'X)^{-1}X'Y$;
-$\hat{\beta_0}=\bar y-\hat{\beta_1}\bar x=\frac1n{\sum_{i=1}^ny_i}-\bar x(\sum_{i=1}^n c_iy_i)=\sum_{i=1}^n(\frac1n-\bar{x}c_i)y_i$
-$\hat{w}=rZ=\frac{\hat{y-\hat{y}}}{S_y}=r\frac{\hat{x-\hat{x}}}{S_x}$
-
-
-\subsubsection{T, expected value}
-a statistic T is an unbiased estimator of parameter if $E(\hat{\beta_1})=\beta_1=E[\sum_{i=1}^nc_iy_i]=\sum_{i=1}^nc_iE[\beta_0+\beta_1x_i+\varepsilon_i]=\beta_0\frac{\sum_{i-1}^n(x_i-\bar x)}{S_{xx}}+{\beta_1}\frac{\sum_{i-1}^n(x_i-\bar x)x_i}{S_{xx}}+\sum_{i=1}^nc_iE(\varepsilon_i)$;
-$E(\hat{\beta_0})=\beta_0=E[\bar y-\hat\beta_1\bar x]=E[\bar y]-\bar xE[\hat\beta_1]=E[\frac{\sum_{i-1}^ny_i}n]-\bar x\hat\beta_1=\frac1n\sum_{i=1}^nE[\beta_0+\beta_1x_i+\varepsilon_i]-\bar x\hat\beta_1=\frac{n\beta_0}n+\frac{\beta_1}n\sum_{i=1}^nx_i+\frac1n\sum_{i=1}^nE(\varepsilon_i)-\bar x\hat\beta_1$
-
-
-\subsubsection{variance covariance}
-Sample variance $S_x^2=\frac{S_{xx}}{n-1}$; $S_y^2=\frac{S_{yy}}{n-1}$;
-
-As $n\rightarrow \infty,Var[\hat\beta_{0/1}]\rightarrow 0$;
-$\hat\beta_{0/1}$ are consistant estimators for $\beta_{0/1}$
-
-Because $Var(x+y)=Var(x)+Var(y)+2Cov(x,y)$, 
-
-$Cov(y_i,y_j)=Cov(\varepsilon_i,\varepsilon_j)=0,for\ {i}\ne{j}$ and
-$Var(y_i)=Var(\beta_0+\beta_1x_i+\varepsilon_i)=Var(\varepsilon_i)=\sigma^2$ Therefore 
-$Var(\hat{\beta_1})=\frac{\sigma^2}{S_{xx}}=Var[\sum_{i=1}^nc_iy_i]=\sum_{i=1}^nc_i^2Var[y_i]$;
-$Var(\hat{\beta_0})=\sigma^2(\frac1n+\frac{\bar x^2}{S_{xx}})=Var[\bar y-\hat\beta_1\bar x]=Var[\sum_{i=1}^n(\frac1n-\bar{x}c_i)y_i]=\sum_{i=1}^n(\frac1n-\bar{x}c_i)^2$;
-$Var[ax,by]=a^2Var(x)+b^2Var(y)+2Cov(x,y)$;
-
-$Cov(x,y)=\sigma_{xy}=E[(x-\bar x)(y-\bar y)]=\frac1n\sum_{i=1}^n(x_i-\bar x)(y_i-\bar y)$
-$Cov(x,a)=0; Cov(x,x)=Var(x)\equiv\sigma^2(x)\equiv\sigma_x^2$
-$Cov(x,y)=Cov(y,x); Cov(ax,by)=abCov(x,y)$
-$Cov(x+a,y+b)=Cov(x,y)$
-$Cov(a_1x_1+a_2x_2, b_1y_1+b_2y_2)=a_1b_1Cov(x_1,y_1)+a_1b_2Cov(x_1,y_2)+a_2b_1Cov(x_2,y_1)+a_2b_2Cov(x_2,y_2)$
-$Cov(\hat\beta_0, \hatβ_1)=−\overline x\sigma^2 S_{xx}$
-$Cov(\bar y,\hat\beta_1) = 0$
-
-\subsubsection{correlation coefficient}
-$|r|=\sqrt{R^2}=Cor(x,y)=\frac{S_{xy}}{\sqrt{S_{xx}S_{yy}}}=\frac{Cov(x,y)}{\sqrt{Var{x}Var{y}}}$;
-$R^2=\frac{SSR}{SST}=1-\frac{SSE}{SST}$ indicates the  variability around $\bar y$ coefficient of determination: proportion of variation in response is explained by the fitted model.
-
-\subsubsection{error variance}
-$S_{yy}=SSE+SSR$
-$\sum_{i=1}^n(y_i-\bar y)^2=\sum_{i=1}^n(y_i-\hat y)^2+\sum_{i=1}^n(\hat y-\bar y)^2$
-
-$\mathbf{SSE}=\sum_{i=1}^ne_i^2=\sum_{i=1}^n(y_i-\hat y)^2=\sum_{i=1}^n(y_i-\hat\beta_0-\hat\beta_1x_i)^2=\sum_{i=1}^n(y_i-(\bar y-\hat{\beta_1}\bar x)-\hat\beta_1x_i)^2=\sum_{i=1}^n[(y_i-\bar y)-\hat{\beta_1}(x_i-\bar x)]^2=\sum_{i=1}^n(y_i-\bar y)^2-2\hat{\beta_1}\sum_{i=1}^n(y_i-\bar y)(x_i-\bar x)+\sum_{i=1}^n(x_i-\bar x)^2=S_{yy}-2\hat\beta_1^2S_{xy}+\hat\beta_1^2S_{xx}=\mathbf{S_{yy}-\hat\beta_1^2S_{xx}}$;
-
-$\mathbf{SSR}=\hat\beta_1^2S_{xx}=\hat\beta_1S_{xy}$;
-
-$\mathbf{S_{yy}}=\sum_{i=1}^n(y_i-\bar y)^2=\sum_{i=1}^n[(\beta_0+\beta_1x_i+\varepsilon_i)-\frac1n\sum_{i=1}^n(\beta_0+\beta_1x_i+\varepsilon_i)]^2=\sum_{i=1}^n[\beta_1(x_i-\bar x)+(\varepsilon_i-\bar\varepsilon_i)]^2=\beta_1^2\sum_{i=1}^n(x_i-\bar x)^2+2\beta_1\sum_{i=1}^n(x_i-\bar x)(\varepsilon_i-\bar\varepsilon_i)+\sum_{i=1}^n(\varepsilon_i-\bar\varepsilon_i)^2$;
-
-Because $\sum_{i=1}^n(\varepsilon_i-\bar\varepsilon_i)=S_{\varepsilon_i\varepsilon_i}=(n-1)S_\varepsilon^2$;
-because $E(S_\varepsilon^2)=\sigma^2$;
-$\mathbf{E[S_{yy}]}=\beta_1^2S_{xx}+2\beta_1\sum_{i=1}^n(x_i-\bar x)(E[\varepsilon_i]-E[\bar\varepsilon_i])+E[(n-1)S_\varepsilon^2]=\mathbf{\beta_1^2S_{xx}+(n-1)\sigma^2}$;
-
-$E[\hat\beta_1^2]=Var(\hat\beta_1)-E[\hat\beta_1]^2=\frac{\sigma^2}{S_xx}+\beta_1^2$;
-
-$\mathbf{E[SSE]}=E[\mathbf{S_{yy}}]-S_{xx}E[\hat\beta_1^2]=\mathbf{(n-2)\sigma^2}$;
-
-$\mathbf{E[SSR]=E[MSR]=\sigma^2+\hat\beta_1^2S_{xx}}$
-
-$E[MSE]={E[SSE]}/(n-2)=\sigma^2=Var(y_i)=Var(\varepsilon)$ MSE is an unbiased estimator for error variance
-
-\subsubsection{distribution, assumption}
-$\hat{\beta_0}\sim N\left(\beta_0,\sigma^2(\frac1n+\frac{\bar x^2}{S_{xx}})\right)$;
-$\hat{\beta_1}\sim N\left(\beta_1,\frac{\sigma^2}{S_{xx}}\right)$;
-$\mathbf{For}\frac{(n-2)\hat\sigma^2}{\sigma^2}\sim\chi_{(n-2)}^2$;
-$\hat\sigma^2=MSE=SSE/(n-2)=S_{xx}Var(\hat\beta_1)=S_{xx}se(\hat\beta_1)^2$;
-$=\frac{S_{xx}}{S_{xx}+n\bar x^2}Var(\hat\beta_0)=\frac{S_{xx}}{S_{xx}+n\bar x^2}se(\hat\beta_0)^2$;
-
-$\frac{\hat\beta_1-\beta_1}{se(\hat\beta_1)}\sim t_{(n-2)}$;
-$\frac{\hat\beta_0-\beta_0}{se(\hat\beta_0)}\sim t_{(n-2)}$;
-$\frac{\hat y_0-\bar y_0}{se(\hat y_0)}= \sim t_{(n-2)}$;
-$MSR/MSE=t^2\sim F_{(1,(n-2))}$
-
-
-\subsubsection{standard error(deviation)}
-$se(\hat\beta_1)=\sqrt{Var(\hat\beta_1)}=\sqrt \frac{\hat\sigma^2}{S{xx}}$;
-$se(\hat{\beta_0})=\sqrt{Var(\hat\beta_0)}=\sqrt{\hat\sigma^2(\frac1n+\frac{\bar x^2}{S_{xx}})}$;
-
-
-\subsubsection{CI}
-$\hat{\beta_1}\pm t_{\alpha/2}se(\beta_1)$;
-$\hat{\beta_0}\pm t_{\alpha/2}se(\beta_0)$;
-Since zero is (not) inside this interval, true intercept can (not) be zero with $1-\alpha$ confidence.
-
-$(\frac{(n-2)\hat\sigma^2}{\sigma^2}\sim\chi_{(\alpha/2)}^2,\frac{(n-2)\hat\sigma^2}{\sigma^2}\sim\chi_{(1-\alpha/2)}^2)$;
-
-\subsubsection{prediction}
-estimated mean (point estimate) of response \textbf{(UNITS)} $\hat y_0=\hat{\beta_0}+\hat{\beta_1}x_0$ True mean $\bar y_0$
-k number of new values of response at a new value of predictor denoted by $x_0$ \textbf{without extapolation}.
-$se(\hat y_0)=\sqrt{MSE\left[(1)+\frac1n+\frac{(x_0-\bar x)^2}{S_{xx}}\right]}$;
-100(1−$\alpha$) \% confidence interval for the MEAN (a single value of) response at a given new value $x_0$ of predictor is
-$(\hat y_0) \hat{\beta_0}+\hat{\beta_1}x_0\pm t_{\alpha/2,n-2}se(\hat y_0)$;
-$E[\hat y_0-\bar y_0]=E[\hat{\beta_0}+\hat{\beta_1}x_0-\beta_0-\beta_1x_0-\frac1k\sum_{i=1}^k\varepsilon_i]=0$; 
-$\hat y_0$ is unbiased estimator of $\bar y_0$;
-
-$Var[\hat y_0-\bar y_0]=Var[\hat{\beta_0}+\hat{\beta_1}x_0-\beta_0-\beta_1x_0-\frac1k\sum_{i=1}^k\varepsilon_i]=Var[\bar y-\hat\beta_1\bar x+\hat{\beta_1}x_0-\frac1k\sum_{i=1}^k\varepsilon_i]=Var[\frac{\sum_{i=1}^ny_i}n-\sum_{i=1}^nc_iy_i(\bar x-x_0)-\frac1k\sum_{i=1}^k\varepsilon_i]=Var\Big[\sum_{i=1}^n[\frac1n-(\bar x-x_0)c_i]y_i\Big]+Var[\sum_{i=1}^k\frac1k\varepsilon_i]-2Cov[y_i,\varepsilon_i]$
-Because $y_i$ and $\varepsilon_i$ are independent for new observations.
-$=\sum_{i=1}^n[\frac1n-(\bar x-x_0)c_i]^2Var(y_i)+\sum_{i=1}^k\frac1{k^2}Var(\varepsilon_i)=\sigma^2[\sum_{i=1}^n{\frac1{n^2}}-\frac{2\bar x}{n}\sum_{i=1}^nc_i+\bar x^2\sum_{i=1}^nc_i^2]=\sigma^2[\frac1n+\frac{(\bar x-x_0)^2}{S_{xx}}+\frac1k]$
-
-
-\subsubsection{intercept known}
-$y=\beta_0+\hat\beta_1x+\varepsilon$;
-$Let SSE=\sum_{i=1}^n(y_i-\beta_0-\hat\beta_1x_i)^2$;
-$\left.\frac{\partial SSE}{\partial\beta_1}\right|_{\hat\beta_1}=-2\sum_{i=1}^n(y_i-\beta_0-\hat\beta_1x_i)x_i=0$;
-$\hat\beta_1\sum_{i=1}^nx_i^2=\sum_{i=1}^n(y_i-\beta_0)x_i$;
-$\hat\beta_1=\frac{\sum_{i=1}^n(y_i-\beta_0)x_i}{\sum_{i=1}^nx_i^2}$;
-$E(\hat\beta_1)=E\left[\frac{\sum_{i=1}^n(y_i-\beta_0)x_i}{\sum_{i=1}^nx_i^2}\right]=\frac1{\sum_{i=1}^nx_i^2}E\left[\sum_{i=1}^nx_i(\beta_1x_i+\varepsilon)\right]=\frac{\beta_1\sum_{i=1}^nx_i^2}{\sum_{i=1}^nx_i^2}-\frac{\sum_{i=1}^nx_i}{\sum_{i=1}^nx_i^2}E[\varepsilon]=\beta_1$ is unbiased;
-Because $Cov(y_i,y_j)=Cov(\varepsilon_i,\varepsilon_j)=0,for\ {i}\ne{j}$ and
-$Var(y_i)=Var(\beta_0+\beta_1x_i+\varepsilon_i)=Var(\varepsilon_i)=\sigma^2$ Therefore 
-$Var(\hat\beta_1)=Var\left(\frac{\sum_{i=1}^n(y_i-\beta_0)x_i}{\sum_{i=1}^nx_i^2}\right)=\frac1{(\sum_{i=1}^nx_i^2)^2}Var(\sum_{i=1}^ny_ix_i-\sum_{i=1}^n\beta_0x_i)=\frac1{(\sum_{i=1}^nx_i^2)^2}Var(\sum_{i=1}^ny_ix_i)=\frac{\sum_{i=1}^nx_i^2}{(\sum_{i=1}^nx_i^2)^2}Var(y_i)=\frac{\sigma^2}{\sum_{i=1}^nx_i^2}$;
-$se(\hat{\beta_1})=\sqrt{Var(\hat\beta_1)}=\sqrt{\frac{\sigma^2}{\sum_{i=1}^nx_i^2}}$
-
-\subsubsection{slope known}
-$y=\hat\beta_0+\beta_1x+\varepsilon$;
-$Let SSE=\sum_{i=1}^n(y_i-\hat\beta_0-\beta_1x_i)^2$;
-$\left.\frac{\partial SSE}{\partial\beta_0}\right|_{\hat\beta_0}=-2\sum_{i=1}^n(y_i-\hat\beta_0-\beta_1x_i)=0$;
-$n\hat\beta_0=\sum_{i=1}^ny_i-\beta_1\sum_{i=1}^nx_i$;
-$\hat\beta_0=\bar y-\beta_1\bar x$;
-$E(\hat\beta_0)=E\left[\frac1n\sum_{i=1}^ny_i-\frac1n\beta_1\sum_{i=1}^nx_i\right]=\frac1nE\left[\sum_{i=1}^n(\beta_0+\beta_1x_i+\varepsilon)-\beta_1\sum_{i=1}^nx_i\right]=\frac1n\sum_{i=1}^nE(\beta_0+\beta_1x_i)+E(\varepsilon)-\beta_1\sum_{i=1}^nx_i=\beta_0$  is unbiased;
-Because $Cov(y_i,y_j)=Cov(\varepsilon_i,\varepsilon_j)=0,for\ {i}\ne{j}$ and
-$Var(y_i)=Var(\beta_0+\beta_1x_i+\varepsilon_i)=Var(\varepsilon_i)=\sigma^2$ Therefore 
-$Var(\hat\beta_0)=\frac1{n^2}Var\left(\sum_{i=1}^ny_i-\beta_1\sum_{i=1}^nx_i\right)=\frac1{n^2}\sum_{i=1}^nVar(y_i)=\frac{\sigma^2}n$
-$se(\hat{\beta_0})=\sqrt{Var(\hat\beta_0)}=\sqrt{\frac{\sigma^2}n}=\sqrt{\frac{MSE}n}$
-
-\subsubsection{through origin}
-$y=\beta_1x_i+\varepsilon_i,\ \varepsilon_i\sim^{iid}N(0,\sigma^2)\ i=1,2..n$;
-$\hat\beta_1=\frac{\sum_{i=1}^ny_ix_i}{\sum_{i=1}^nx_i^2}$;
-$E(\hat\beta_1)==\beta_1$; is unbiased;
-$Var(\hat\beta_1)=\frac{\sigma^2}{\sum_{i=1}^nx_i^2}$;
-$se(\hat{\beta_1})=\sqrt{\frac{\hat\sigma^2}{\sum_{i=1}^nx_i^2}}$;
-$\hat{\beta_1}\pm t_{\frac\alpha2,n-1}se(\hat{\beta_1})$
+\subsection{hypothesis test}
+\begin{tabular}{ l|l|l }
+model  &H0&H1\\
+FT-CRD & $\mu_1=\mu_2=..=\mu_i$& at least two of $\mu_i$ are different\\
+RT-CRD & $\sigma_{\tau}^2=0$& $\sigma_{\tau}^2>0$\\
+FB-RCBD& $\mu_1=\mu_2=..=\mu_i$& at least two of $\mu_i$ are different\\
+ -Block& $\beta_1=\beta_2=..=\beta_j=0$& at least one of $\beta_j\neq 0$\\
+RB-RCBD& $\sigma_{\beta}^2=0$& $\sigma_{\beta}^2>0$\\
+\end{tabular}
 
 \subsubsection{ANOVA}
-\begin{tabular}{@{}ll|@{}ll|@{}ll|@{}ll|@{}ll|@{}}
-    & df  & Sum Sq             & MS  & F    & P \\
-SSR & k predictor & $\hat\beta_1S{xy},\hat\beta_1^2S{xx}$ & SSR/dfR & MSR/ &   \\
-SSE & n-1-k & $SST-SSR$          & SSE/dfE & MSE     \\
-SST & n observation -1 & $S_{yy}$ &  & $t^2$\\
-\end{tabular}
-There is strong evidence that the fitted model is statistically significant at 5\% significance level because p value is much smaller than 0.05
-
-\subsubsection{regression analysis}
-
-\begin{tabular}{@{}ll|@{}ll|@{}ll|@{}ll|@{}}
- & estimate & se & t & P \\
-intercept          & $\hat\beta_0$            & 
-$\sqrt{MSE(\frac1n+\frac{\bar x^2}{S_{xx}})}$ & 
-$\frac{\hat\beta_0}{se(\hat\beta_0)}$         & \\
-slope          & $\hat\beta_1$            & 
-$\sqrt{\frac{MSE}{S_{xx}}}$                   & 
-$\frac{\hat\beta_1}{se(\hat\beta_1)}$         & \\
+\begin{tabular}{l|l|l|l|l|}
+    & SS   &      df     & MS  & F    \\
+$SS_{Trt}$&$n\sum^a_{i=1}(\bar y_{i.}−\bar y_{..})^2=\frac1n\sum^a_{i=1}y_{i.}^2-\frac{y_{..}^2}N$&$a-1$&$\frac{SS_{Trt}}{a-1}$&$\frac{MS_{Trt}}{MS_E}$\\
+$SS_E$    &$\sum^a_{i=1}\sum^n_{j=1}(y_{ij}−\bar y_{i.})^2$     &$N-a=a(n-1)$& $\frac{SS_E}{N-a}$  \\
+$SS_{Trt}$&$b\sum^a_{i=1}(\bar y_{i.}−\bar y_{..})^2=\frac1b\sum^a_{i=1}y_{i.}^2-\frac{y_{..}^2}N$&$a-1$&$\frac{SS_{Trt}}{a-1}$&$\frac{MS_{Trt}}{MS_E}$\\
+$SS_{Blk}$&$a\sum^b_{j=1}(\bar y_{.j}−\bar y_{..})^2=\frac1b\sum^b_{j=1}y_{.j}^2-\frac{y_{..}^2}N$&$b-1$&$\frac{SS_{Trt}}{b-1}$&$\frac{MS_{Blk}}{MS_E}$\\
+$SS_E$    &$\sum^a_{i=1}\sum^b_{j=1}(y_{ij}−\bar y_{i.})^2$     &$(a-1)(b-1)$& $\frac{SS_E}{df_E}$&\\
+$SS_T$    &$\sum^a_{i=1}\sum^b_{j=1}(y_{ij}−\bar y_{..})^2=\sum^a_{i=1}\sum^b_{j=1}y_{ij}^2-\frac{y_{..}^2}N$     &$N-1=ab-1$
 \end{tabular}
 
-residual standard error($\hat\sigma=\sqrt{MSE}$) on dfE;
-
-Multiple $R^2$, adjusted $R^2$;
-
-F statistic on dfR and dfE.
-
-There seems to be a decreasing (negative) medium approximately linear relationship.
-
-The average y increases by $\beta_1$ units as the x increases by 1 unit.
-
-There is strong (not enoygh ) evidence that the true slope of fitted model is significantly different from zero at 5\% significance level because p value is much smaller than 0.05;
-
-The 95\% confidence interval (does not) contain zero. Therefore, we are 95\% confidence that the true intercept is different from (can be) zero;
-
-hypothesis $H_0:\beta_1=c; H_1:\beta_1\ne c$;
-
-Test Statistic (computed assuming $H_0$ is true:
-
-$\pm? t_0=\frac{\hat\beta_1-c}{se(\hat\beta_1)}$;
-
-Decision: Since the p-value$>(<)$significance level ($\alpha$=0.05), there is no enough evidence to conclude that the true slope is different from c (reject $H_0$ and conclude $H_1$ is true).
-
-\subsection{multiple regression}
-$y_i=\beta_0+\beta_1x_i1+\beta_2x_i2+..+\beta_kx_ik+\varepsilon_i=\beta_0+\sum_{\beta_j}x_ij+\varepsilon_i, i=1,2,..n, \varepsilon_i\sim^{iid} N(0,\sigma^2) $
-
-$\mathbf{Y}=\mathbf{X}\mathbf{\beta}+\mathbf{\varepsilon}$; $\mathbf{\varepsilon}\sim N(0,\sigma^2\mathbf{I})$ where 0 is a $n\times1$ vector of zero and $\mathbf{I}$ is a $n\times n$ identity matrix.
+\subsubsection{CI}
+\begin{tabular}{l|l|l}
+        CI   & balanced & unbalanced \\
+$\mu_i$      &$\bar y_i\pm t_{\frac{\alpha}2}\sqrt{\frac{MS_E}{n}}$&$\bar y_i\pm t_{\frac{\alpha}2}\sqrt{\frac{MS_E}{n_i}}$\\
+$\mu_i-\mu_j$&$\bar y_{i.}-\bar y_{j.}\pm t_{\frac{\alpha}2}\sqrt{\frac{2MS_E}{n}}$&$\bar y_{i.}-\bar y_{j.}\pm t_{\frac{\alpha}2}\sqrt{MS_E(\frac{1}{n_i}+\frac{1}{n_j})}$
+\end{tabular}
 
 
 
 
-\end{multicols}
+
+\subsubsection{expected value}
+\begin{tabular}{l|l|l|l|l|l|l|l}
+     &$y_{ij}$  &$\bar y_{..}$&$\bar y_{i.}$&$\bar y_{.j}$&$MS_{Trt}$&$MS_{Blk}$&$MS_{E}$\\
+E[f.]  &  $\mu$   &  $\mu$      &$\mu+\tau_i$ &$\mu+\beta_j$&$\sigma^2+\frac{n}{a-1}\sum_{i=1}^a\tau_i^2$& &$\sigma^2$\\
+V[f.]  &$\sigma^2$&$\frac{\sigma^2}{na}$&$\frac{\sigma^2}{n}$\\
+$E[f.^2]$&$\mu^2+\sigma^2$&$\mu^2+\frac{\sigma^2}{na}$&$\mu_i^2+\frac{\sigma^2}{n}$\\
+E[r.]  &  $\mu$   &  $\mu$      &$\mu+\tau_i$ &             &$\sigma^2+\frac{b}{a-1}\sum_{i=1}^a\tau_i^2$&$\sigma^2+\frac{a}{b-1}\sum_{j=1}^b\beta_j^2$\\
+V[r.]  &$\sigma^2+\sigma_\tau^2$&$\frac{\sigma_\tau^2}{a}+\frac{\sigma^2}{na}$&$\frac{\sigma^2}{n}+\sigma_\tau^2$&\\
+$E[r.^2]$&$\mu^2+\sigma^2+\sigma_\tau^2$&$\mu^2+\frac{\sigma_\tau^2}{a}+\frac{\sigma^2}{na}$&$\mu_i^2+\frac{\sigma^2}{n}+\sigma_\tau^2$
+\end{tabular}
+
+
+\begin{tabular}{l|l|l|l|l}
+$\hat\mu_i$&$\hat\tau_i$&$\hat\beta_j$&$\hat y_{ij}$&$ε_{ij}$\\
+$\bar y_{..}$&$\bar y_{i.}-\bar y_{..}$&$\bar y_{.j}-\bar y_{..}$&$\bar y_{i.}+\bar y_{.j}-\bar y_{..}$&$\bar y_{ij}-\bar y_{..}$
+\end{tabular}
+
+\begin{tabular}{l|l|l|l|l}
+$\hat\sigma^2$&$\hat\sigma_{Trt}^2$&$\hat\sigma_{Blk}^2$&$\widehat{Var(\bar y_{i.})}$&$\hat{X}$\\
+$MSE$&$\frac{MS_{Trt}-MS_{E}}{n}$&$\frac{MS_{Blk}-MS_{E}}{a}$&$\frac{MS_{Trt}}{n}$&$\frac{ay'_{i.}+by'_{.j}-y_{..}'}{(a-1)(b-1)}$
+\end{tabular}
+
+\subsubsection{covariance}
+
+
+
+\subsubsection{distribution, assumption}
+
+
+\subsubsection{contrast}
+
+
+
+
+
+
+
+
+
+% \end{multicols}
 \end{document}
