--- a/docs/stat565/temp_stat565.Rmd
+++ b/docs/stat565/temp_stat565.Rmd
@@ -135,14 +135,14 @@ $MS_{E}=\frac{SS_{E}}{N-a}=\frac{11.91}{36}=0.3308333$;
   (e) write the name of probability distribution along with its parameter value(s) used to test the above hypothesis. $F_{(df_{Blk}=5,df_E=20)}=\frac{SS_{Blk}}{SS_E}$
   
  (5) If treatment effect was fixed and block effect was random,
-  (a) compute the estimated variance for blocks.$\hat\sigma_{Blk}^2=\frac{MS_{Blk}-MS_{Blk}}{a}=\frac{40-10}6=5$
+  (a) compute the estimated variance for blocks.$\hat\sigma_{Blk}^2=\frac{MS_{Blk}-MS_{E}}{a}=\frac{40-10}5=6$
   
   (b) write the overall hypothesis about treatments for this study.
   H0: $\mu_1=\mu_2=\mu_3=\mu_4=\mu_5$, or $\tau_1=\tau_2=\tau_3=\tau_4=\tau_5=0$
   H1: at least two of $\mu_i$ are differentor at least one $\tau\neq0$.
   
   (c) write the name of probability distribution along with its parameter value(s) used to test the above hypothesis.
-  $F_{(df_{Trt}=4,df_E=20)}=\frac{SS_{Blk}}{SS_E}$
+  $F_{(df_{Trt}=4,df_E=20)}=\frac{SS_{Trt}}{SS_E}$
   
   (d) write the overall hypothesis about blocks for this study.
   H0: $\sigma_{\beta}^2=0$, $E[MS_{Blk}]=\sigma^2$
@@ -204,7 +204,7 @@ Note: For the given model in each of the following four problems, be able to der
 |FB-RCBD|$\frac{(b-1)\sigma^2}b$|$\beta_{j}^2$|$\frac{(b-1)\sigma^2}b+\beta_{j}^2$|
 |RB-RCBD|$\frac{(b-1)(\sigma_{\beta}^2+\sigma^2)}b$|$0$|$\frac{(b-1)(\sigma_{\beta}^2+\sigma^2)}b$|
 |$E[(\bar y_{i.}-\bar y_{..})^2]$|$=Var[\bar y_{i.}-\bar y_{..}]$|$+E[\bar y_{i.}-\bar y_{..}]^2$|$=$|
-|FT-CRD |$\frac{(n+1)\sigma^2}{n}$| $\tau_i^2$ |$\frac{(a-1)\sigma^2}{an}+\tau_i^2$|
+|FT-CRD |$\frac{(a-1)\sigma^2}{an}$| $\tau_i^2$ |$\frac{(a-1)\sigma^2}{an}+\tau_i^2$|
 |RT-CRD |$\frac{(n\sigma_{\tau}^2+\sigma^2)(a-1)}{an}$| $0$ |$\frac{(a-1)(n\sigma_{\tau}^2+\sigma^2)}{an}$|
 |FB-RCBD|$\frac{(a-1)\sigma^2}{ab}$|$\tau_i^2$|$\frac{(a-1)\sigma^2}{ab}+\tau_i^2$|
 |RB-RCBD|$\frac{(a-1)\sigma^2}{ab}$|$\tau_i^2$|$\frac{(a-1)\sigma^2}{ab}+\tau_i^2$|
